bef v2 (se agregaron ruteos para el funcionamiento del navbar)

--- a/front/bef/src/styles/bandasCard.css
+++ b/front/bef/src/styles/bandasCard.css
@@ -1,9 +1,9 @@
-#container-cards{
+/* #container-cards{
     margin-top: 100px;
-}
+} */
 
 
-.card{
-    width: 18rem;
+/* .card{
+    width: 10rem;
     justify-content: center;
-}
+} */
