--- a/front/bef/src/styles/portada.css
+++ b/front/bef/src/styles/portada.css
@@ -4,7 +4,7 @@
   
 .centered-button {
     position: absolute;
-    top: 75%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #000000;
@@ -12,8 +12,12 @@
 
 
 @media only screen and (max-width: 600px) {
+    #imagenGradient {
+        margin-top: 56px;
+    }
     .centered-button {
-        position: absolute;
+        margin-top: 10%;
+        position: relative;
         top: 100%;
         left: 50%;
         transform: translate(-50%, -50%);
