--- a/front/bef/src/App.css
+++ b/front/bef/src/App.css
@@ -1,13 +1,12 @@
-.fullContainer {
-  align-items: center;
-}
-
 #root {
-  width: 100vw;
+  align-items: center;
+  width: 100%;
   height: 100vh;
 }
-h1{
-  text-align: center;
-  color: rgb(95, 158, 98);
+
+.imagen-fondo {
+  background-image: url('../images/port be.jpg');
+  background-size: cover;
 }
+
 
