--- a/front/bef/src/index.css
+++ b/front/bef/src/index.css
@@ -1,8 +1,14 @@
 *{
-    padding: 0;
-    margin: 0;
     box-sizing: border-box;  
 }
 body{
     background-color: black;
+    margin: 0;
+    padding: 0;
 }
+h1{
+    text-align: center;
+    color: rgb(255, 255, 255);
+    text-shadow: 0 0 30px rgb(255, 255, 255);
+}
+
