--- a/front/bef/src/styles/bandasCard.css
+++ b/front/bef/src/styles/bandasCard.css
@@ -1,9 +1,13 @@
-/* #container-cards{
-    margin-top: 100px;
-} */
+.inner{
+    overflow: hidden;
+}
 
+.inner img{
+    transition: all 1.5s ease;
+    top: 0;
+    left: 0;
+}
 
-/* .card{
-    width: 10rem;
-    justify-content: center;
-} */
+.inner:hover img{
+    transform: scale(1.5);
+}
