--- a/front/bef/src/styles/footer.css
+++ b/front/bef/src/styles/footer.css
@@ -3,13 +3,14 @@ footer{
     background-image: url('../images/foto3.jpg');
     background-size: cover;
     background-position: center;
+    z-index: 2;
 }
 
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
     #footer{
         background-color: rgba(37, 37, 37, 0.50);;
         background-image: url('../images/foto3.jpg');
         background-size: cover;
         background-position: center;
     }
-}
+} */
