--- a/front/bef/src/styles/footer.css
+++ b/front/bef/src/styles/footer.css
@@ -3,7 +3,7 @@ footer{
     background-image: url('../images/foto3.jpg');
     background-size: cover;
     background-position: center;
-    z-index: 2;
+    /* position: relative; */
 }
 
 /* @media only screen and (max-width: 600px) {
