--- a/front/bef/src/styles/Evento.css
+++ b/front/bef/src/styles/Evento.css
@@ -1,9 +1,11 @@
-#ubicacion{
+#mapa{
     align-items: center;
-    width: 500px;
-    height: 350px;
+    width: 100%;
+    height: 100%;
     border:0
 }
-#cardLocation{
-    background-color: rgba(37, 37, 37, 0.50);
+
+.ubi{
+    width: 30rem;
+    height: 30rem;
 }
