--- a/front/bef/src/styles/cuenta.css
+++ b/front/bef/src/styles/cuenta.css
@@ -1,18 +1,68 @@
-#cuenta{
-    background-color: rgb(4, 4, 65);
+/* ? ----- Cuenta Regresiva ----- */
+#cuenta {
+	display: flex;
+	margin-bottom: 100px;
+}
+
+.simply-section {
+	background: rgb(25, 70, 39);
+	width: 50%;
+	/* height: 180px; */
+	margin: 10px;
+	border-radius: 100px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.simply-amount {
+    color: rgb(204, 184, 5);
+	display: flex;
+	font-size: 50px;
+	font-weight: 700;
+    align-items: center;
+	justify-content: center;
+}
+
+.simply-word {
+	font-weight: 300;
+	font-size: 30px;
+    color: aliceblue;
+    align-items: center !important;
+	justify-content: center !important;
 }
 
 
-.simply-section{
-    background-color: blueviolet;
-    justify-content: center;
-}
+@media only screen and (max-width: 600px) {
+    #cuenta {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 120px;
+    }
+    
+    .simply-section {
+        background: rgb(25, 70, 39);
+        width: 50%;
+        margin: 0 10px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .simply-amount {
+        color: rgb(204, 184, 5);
+        display: flex;
+        font-size: 40px;
+        font-weight: 500;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .simply-word {
+        font-weight: 250;
+        font-size: 20px;
+        color: aliceblue;
+    }
 
-.simply-amount{
-    color: rgb(230, 230, 230);
-    margin-right: 50px;
-}
-
-.simply-word{
-    color: aqua;
 }
