se modificaron componentes (evento y nosotros)

--- a/front/bef/src/styles/Nosotros.css
+++ b/front/bef/src/styles/Nosotros.css
@@ -2,6 +2,10 @@
     max-width: 540px;
 }
 
+#transparentCard{
+    background-color: rgba(37, 37, 37, 0.50); 
+}
+
 .inner{
     overflow: hidden;
 }
