--- a/front/bef/src/styles/Evento.css
+++ b/front/bef/src/styles/Evento.css
@@ -1,11 +1,22 @@
 #mapa{
     align-items: center;
-    width: 100%;
-    height: 100%;
-    border:0
+    width: 70%;
+    height: 70vh;
+    border:0;
+    
 }
 
-.ubi{
-    width: 30rem;
-    height: 30rem;
+#transparentCard{
+    background-color: rgba(37, 37, 37, 0.50); 
 }
+
+@media only screen and (max-width: 600px){
+    #mapa{
+        align-items: center;
+        width: 100%;
+        height: 30vh;
+        border:0;
+        
+    }
+}
+
