--- a/front/bef/src/styles/Evento.css
+++ b/front/bef/src/styles/Evento.css
@@ -10,6 +10,21 @@
     background-color: rgba(37, 37, 37, 0.50); 
 }
 
+.centered-button2 {
+    position: relative;
+    background-color: rgb(68, 112, 45) !important;
+    color: rgb(255, 255, 255) !important;
+    border-color: rgb(255, 255, 255);
+
+}
+
+.centered-button2:hover{
+    background-color: #000000 !important;
+    color: rgb(255, 255, 255) !important;
+    border-color: rgb(255, 255, 255) !important;
+    box-shadow: 0 0 10px rgb(255, 255, 255);
+}
+
 @media only screen and (max-width: 600px){
     #mapa{
         align-items: center;
